unpackaged/main/default/objects/pro_Send_Financial_Email__mdt/pro_Send_Financial_Email__mdt.object-meta.xml
<CustomObject>
    <description>JP 25/04/2023 - Created by Prodigy</description>
    <label>Prodigy - Send Financial Email</label>
    <pluralLabel>Prodigy - Send Financial Emails</pluralLabel>
</CustomObject>