unpackaged/main/default/objects/pro_Send_Financial_Email__mdt/fields/pro_Accounting_Seed_Ledger__c.field-meta.xml
<CustomField>
    <fullName>pro_Accounting_Seed_Ledger__c</fullName>
    <description>JP 31/08/2023 - Created by Prodigy</description>
    <label>Accounting Seed Ledger</label>
    <length>18</length>
    <type>Text</type>
</CustomField>