unpackaged/main/default/objects/pro_Send_Financial_Email__mdt/fields/pro_Billing_Format__c.field-meta.xml
<CustomField>
    <fullName>pro_Billing_Format__c</fullName>
    <description>JP 31/08/2023 - Created by Prodigy</description>
    <label>Billing Format</label>
    <length>18</length>
    <type>Text</type>
</CustomField>