unpackaged/main/default/objects/pro_Send_Financial_Email__mdt/fields/pro_Days__c.field-meta.xml
<CustomField>
    <fullName>pro_Days__c</fullName>
    <description>JP 25/04/2023 - Created by Prodigy</description>
    <label>Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>