unpackaged/main/default/objects/pro_Send_Financial_Email__mdt/fields/pro_Type__c.field-meta.xml
<CustomField>
    <fullName>pro_Type__c</fullName>
    <description>JP 25/04/2023 - Created by Prodigy</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
                <default>true</default>
                <label>Billing</label>
            </value>
            <value>
                <fullName>Customer Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>