unpackaged/main/default/objects/pro_Send_Financial_Email__mdt/fields/pro_Visualforce_Page__c.field-meta.xml
<CustomField>
    <fullName>pro_Visualforce_Page__c</fullName>
    <description>JP 25/04/2023 - Created by Prodigy</description>
    <label>Visualforce Page</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>